--- a/src/EventHub.BackgroundServices/appsettings.json
+++ b/src/EventHub.BackgroundServices/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Host=localhost;Database=EventHub;Username=root;Password=root;Port=5432"
+    "Default": "Host=(localdb)\\MSSQLLocalDB;Database=EventHub;Trusted_Connection=True"
   },
   "Redis": {
     "Configuration": "127.0.0.1"
