--- a/src/EventHub.EntityFrameworkCore/EventHub.EntityFrameworkCore.csproj
+++ b/src/EventHub.EntityFrameworkCore/EventHub.EntityFrameworkCore.csproj
@@ -18,7 +18,7 @@
   <ItemGroup>
     <PackageReference Include="Volo.Abp.BlobStoring.Database.EntityFrameworkCore" Version="5.0.1" />
     <ProjectReference Include="..\EventHub.Domain\EventHub.Domain.csproj" />
-    <PackageReference Include="Volo.Abp.EntityFrameworkCore.PostgreSql" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="5.0.1" />
     <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="5.0.1" />
     <PackageReference Include="Volo.Abp.SettingManagement.EntityFrameworkCore" Version="5.0.1" />
     <PackageReference Include="Volo.Abp.Identity.EntityFrameworkCore" Version="5.0.1" />
