--- a/src/EventHub.HttpApi.Host/appsettings.json
+++ b/src/EventHub.HttpApi.Host/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Host=localhost;Database=EventHub;Username=root;Password=root;Port=5432"
+    "Default": "Server=(localdb)\\MSSQLLocalDB;Database=EventHub;Trusted_Connection=True"
   },
   "Redis": {
     "Configuration": "localhost"
