--- a/src/EventHub.IdentityServer/appsettings.json
+++ b/src/EventHub.IdentityServer/appsettings.json
@@ -1,8 +1,5 @@
 {
   "ConnectionStrings": {
-    "Default": "Host=localhost;Database=EventHub;Username=root;Password=root;Port=5432"
-  },
-  "Redis": {
-    "Configuration": "localhost"
+    "Default": "Server=(localdb)\\MSSQLLocalDB;Database=EventHub;Trusted_Connection=True"
   }
 }
